--- a/zyjx.html
+++ b/zyjx.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>给链视频解析 - VIP视频免费看 | 全网VIP视频在线解析平台</title>
+  <title>自用视频解析 - VIP视频免费看 | 全网VIP视频在线解析平台</title>
   <meta name="description" content="免费观看各大视频平台VIP内容，支持优酷、爱奇艺、腾讯视频、芒果TV等VIP视频在线解析，无需会员即可享受高清视频服务。">
   <meta name="keywords" content="视频解析,VIP解析,免费看VIP,优酷解析,爱奇艺解析,腾讯视频解析,芒果TV解析,在线视频解析,会员视频免费看">
   <meta name="theme-color" content="#4a6bff">
