--- a/zyjx.html
+++ b/zyjx.html
@@ -426,7 +426,7 @@
       <div class="card-body">
         <!-- 视频播放器 -->
         <div class="video-container">
-          <iframe src="" id="player" allowtransparency="true" allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
+          <iframe src="ks.html" id="player" allowtransparency="true" allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
         </div>
         
         <!-- 解析表单 -->
