--- a/zyjx.html
+++ b/zyjx.html
@@ -447,6 +447,9 @@
           
           <div class="btn-group-vertical">
 
+            <button type="button" class="btn btn-primary btn-lg btn-block" onclick="dihejk()">
+              开始解析
+
             <button type="button" class="btn btn-outline-primary btn-lg btn-block" onclick="dihejk2()">
               解析播放
             </button>
