--- a/ks.html
+++ b/ks.html
@@ -5,7 +5,7 @@
    
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"> 
   <meta name="referrer" content="never"> 
-  <title>免费接口-无广告</title> 
+  <title>免费接口</title> 
   <style>
   body, html, #WANG {
     background-color: #000;
@@ -20,7 +20,7 @@
   <!--http://wx1.sinaimg.cn/large/006J7kZbgy1g1l23wfe0ig30b408w0tc.jpg--> 
   <center> 
    <div style="margin:0px auto;width:100%;height:500px;"> 
-    <iframe id="WANG" scrolling="no" allowtransparency="true" frameborder="0" src="./saved_resource.html" style="margin-top:1px;background:#000 url(&#39;image/videobg.gif&#39;) no-repeat center;" width="100%" height="500px">
+    <iframe id="WANG" scrolling="no" allowtransparency="true" frameborder="0" src="saved_resource.html" style="margin-top:1px;background:#000 url(&#39;image/videobg.gif&#39;) no-repeat center;" width="100%" height="500px">
 	</iframe> 
    </div>
   </center> 
