--- a/zyjx.html
+++ b/zyjx.html
@@ -421,9 +421,9 @@
           <div class="form-group">
             <label for="jk">选择解析接口</label>
             <select class="form-control form-control-lg" id="jk">
-              <option value="https://yyynnnsss.github.io/taozy/?url=">VIP视频解析</option>
-              <option value="https://yyynnnsss.github.io/tao/?url=">VIP视频解析二</option>
-              <option value="https://yyynnnsss.github.io/tao/jxx/?url=">VIP视频解析三</option>
+              <option value="https://jx.xmflv.com/?url=">VIP视频解析</option>
+              <option value="https://jx.hls.one/?url=">VIP视频解析二</option>
+              <option value="https://jx.xmflv.com/?url=">VIP视频解析三</option>
             </select>
           </div>
           
