--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 </head>
 
 <body>
-  <script src="js/爱心.js"></script>
+  <script src="/js/爱心.js"></script>
   <!-- 顶部Banner -->
   <header class="header-banner">
     <div class="logo">
