Replace script source with new JavaScript file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 
-
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -401,7 +399,7 @@
 </head>
 
 <body>
-  <script src="/js/爱心.js"></script>
+  <script src="js/下雨.js"></script>
   <!-- 顶部Banner -->
   <header class="header-banner">
     <div class="logo">
