--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/x-icon" href="logo.png" media="screen" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>自用视频解析</title>
   <meta name="description" content="视频解析，免费观看各大视频平台VIP内容，支持优酷、爱奇艺、腾讯视频、芒果TV等VIP视频在线解析，无需会员即可享受高清视频服务。">
