--- a/cs/index.html
+++ b/cs/index.html
@@ -23,7 +23,7 @@
 <div id="loading" align="center"><div class="mov"></div></div>
 <div id="player" class="w-h"></div>
 <script type="text/javascript">
-        var url = decodeURIComponent(encodeURIComponent(new URLSearchParams(location.search))).replace(new RegExp(/(\S*)url=/),"");
+        var url = "https://m.v.qq.com/x/m/play?cid=mzc00200m7eq4oq&vid=l4101eeg8np";
         var isMobiles = navigator.userAgent.match(/iPad|iPhone|Android|Linux|iPod/i)!=null ? 1 : 0;
         if(isMobiles == 0 && window.self == window.top && url == ""||url == "undefined"||url == "null"){
         XMlayEr.error('<style>.container{display:flex;justify-content:center;align-items:center;height:100vh;}iframe{width:80%;max-width:1100px;height:630px;border: 3px solid #CC6633;}</style><div class="container"><iframe src="jx.html"></iframe></div>');
