--- a/wyy.html
+++ b/wyy.html
@@ -290,7 +290,7 @@
     <div class="container">
         <h1>网易云单曲解析</h1>
         <div class="music-note"><i class="fas fa-music"></i></div>
-        <form id="apiForm" action="api.php" method="post">
+        <form id="apiForm" action="https://only.ccccocccc.cc/wyyun/api.php" method="post">
             <div class="input-group">
                 <label for="id">歌曲ID：</label>
                 <input type="text" id="id" name="id" required placeholder="输入ID或者音乐分享链接">
