--- a/wyy.html
+++ b/wyy.html
@@ -313,7 +313,7 @@
                             lrctran(data.lyric, data.tlyric) : data.lyric;
                         $('#lyric').html(processedLyrics.replace(/\n/g, '<br>'));
 
-                        // 初始化播放器
+                        // 初始化音乐播放器
                         new APlayer({
                             container: document.getElementById('aplayer'),
                             lrcType: 1,
