--- a/wyy.html
+++ b/wyy.html
@@ -57,14 +57,14 @@
     <script src="https://cdn.kanxizai.cn/ajax/libs/browser-id3-writer/4.4.0/browser-id3-writer.min.js"></script>
 
     <!-- 统计脚本 -->
-    <script charset="UTF-8" id="LA_COLLECT" src="./js/vendor/js-sdk-pro.min.js"></script>
+    <script charset="UTF-8" id="LA_COLLECT" src="https://www.kanxizai.cn/163_music/js/vendor/js-sdk-pro.min.js"></script>
     <script>LA.init({ id: "3LqkTrqSpXRKvmFy", ck: "3LqkTrqSpXRKvmFy" })</script>
 
     <!-- 暗黑模式切换脚本 -->
-    <script src="./js/theme-switcher.js?v=5.2.0"></script>
+    <script src="https://www.kanxizai.cn/163_music/js/theme-switcher.js?v=5.2.0"></script>
     
     <!-- 公告弹窗样式 -->
-    <link rel="stylesheet" href="./css/announcement.css?v=2.0.0">
+    <link rel="stylesheet" href="https://www.kanxizai.cn/163_music/css/announcement.css?v=2.0.0">
 </head>
 
 <body>
