--- a/wyy.html
+++ b/wyy.html
@@ -40,10 +40,10 @@
     <link href="https://cdn.kanxizai.cn/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.kanxizai.cn/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.kanxizai.cn/ajax/libs/APlayer/css/APlayer.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css?v=5.2.0">
-    <link rel="stylesheet" href="./css/playlist.css?v=5.2.0">
-    <link rel="stylesheet" href="./css/quality.css?v=5.2.0">
-    <link rel="stylesheet" href="./css/history-modal.css?v=5.2.0">
+    <link rel="stylesheet" href="https://www.kanxizai.cn/163_music/css/index.css?v=5.2.0">
+    <link rel="stylesheet" href="https://www.kanxizai.cn/163_music/css/playlist.css?v=5.2.0">
+    <link rel="stylesheet" href="https://www.kanxizai.cn/163_music/css/quality.css?v=5.2.0">
+    <link rel="stylesheet" href="https://www.kanxizai.cn/163_music/css/history-modal.css?v=5.2.0">
 
     <!-- JavaScript库 -->
     <script src="https://cdn.kanxizai.cn/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -64,7 +64,7 @@
     <script src="https://www.kanxizai.cn/163_music/js/theme-switcher.js?v=5.2.0"></script>
     
     <!-- 公告弹窗样式 -->
-    <link rel="stylesheet" href="./css/announcement.css?v=2.0.0">
+    <link rel="stylesheet" href="https://www.kanxizai.cn/163_music/css/announcement.css?v=2.0.0">
 </head>
 
 <body>
