--- a/wyy.html
+++ b/wyy.html
@@ -34,7 +34,7 @@
     <meta name="twitter:image" content="https://www.kanxizai.cn/163_music/img/og-image.png">
 
     <!-- 规范链接 -->
-    <link rel="canonical" href="https://www.kanxizai.cn/163_music/">
+    <link rel="canonical" href="https://yyynnnsss.github.io/taozy/wyy.html">
 
     <!-- 样式表 -->
     <link href="https://cdn.kanxizai.cn/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
