--- a/wyy.html
+++ b/wyy.html
@@ -831,8 +831,7 @@
             </div>
         </div>
     </div>
-    <script src="https://www.kanxizai.cn/163_music/js/api-security.js?v=5.2.0"></script>
-    <script src="https://www.kanxizai.cn/163_music/js/api-security.js?v=5.2.0"></script>
+    
     <script src="https://www.kanxizai.cn/163_music/js/flac-meta.js?v=5.2.0"></script>
     <script src="https://www.kanxizai.cn/163_music/js/qualitySelector.js?v=5.2.0"></script>
     <script src="https://www.kanxizai.cn/163_music/js/musicParser.js?v=5.2.0"></script>
@@ -841,7 +840,7 @@
     <script src="https://www.kanxizai.cn/163_music/js/historyManager.js?v=5.2.0"></script>
     <script src="https://www.kanxizai.cn/163_music/js/playlistParser.js?v=5.2.0"></script>
     <script src="https://www.kanxizai.cn/163_music/js/settingsManager.js?v=5.2.0"></script>
-
+    <script src="https://www.kanxizai.cn/163_music/js/main.js?v=5.2.0"></script>
     
     <!-- PV/UV统计脚本 -->
     <script src="https://www.kanxizai.cn/163_music/js/track.js?v=1.0.0"></script>
